<resources>
    <string name="app_name">Locali</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="text_busca">Endereço:</string>
    <string name="button_busca">Buscar</string>

    <string name="text01">Restaurantes</string>
    <string name="text02">Mercados</string>
    <string name="text03">Shoppings</string>
    <string name="textMap">Mapa</string>

    <string name="buttonLocal">Ver localização</string>
    <string name="title_activity_mercado">Mercado</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="title_activity_restaurant_drawer">RestaurantDrawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login_teste">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="LOGIN_FAILED">Não foi possivel realizar o login, tente novamente.</string>
    <string name="showLogin">Você não está logado</string>
    <string name="sairApp">Logout</string>
    <string name="do_login">Faça o login</string>
    <string name="avaliar_local">Avalie este local</string>
    <string name="ver_no_mapa">Ver no mapa</string>
    <string name="totalAvaliacoes">Total de avaliações: </string>
    <string name="mediaAvaliações">Média das avaliações</string>
    <string name="nomeAplicativo">Locali</string>
</resources>
