<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/restauranticon"
            android:title="@string/text01" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/marketicon"
            android:title="@string/text02" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/shoppingicon"
            android:title="@string/text03" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/mapicon"
            android:title="@string/textMap" />
    </group>

    <item android:title="Logout">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/loginGoogle"
                    android:title="@string/sairApp"
                    />

            </group>
        </menu>

    </item>



</menu>
