<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    tools:context=".UserChooseFragment"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:background="@color/Gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:id="@+id/imageLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nomeLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="20dp"
                    android:text="Nome do local"
                    />

                <TextView
                    android:id="@+id/enderecoLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:textSize="16dp"
                    android:text="Endereço do local"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total de avaliações: "/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/mediaAvaliações"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-condensed"
                    />
                <RatingBar
                    android:id="@+id/mediaAvaliacoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"


                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/texto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/totalAvaliacoes"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif-condensed"
                    />

                    <TextView
                        android:id="@+id/totalAvaliacoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/texto"
                        android:layout_marginStart="10dp"
                        android:layout_toRightOf="@+id/texto"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Média das avaliações: "
                    />-->
                <!--<TextView
                    android:id="@+id/mediaAvaliacoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>-->

            </LinearLayout>
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:stepSize="1"
                android:layout_marginTop="50dp"
                />
            <Button
                android:id="@+id/buttonAvaliar"
                android:onClick="onClickAvaliar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avaliar_local"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buscarLocal"
            android:text="@string/ver_no_mapa"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClickBusca"/>

    </RelativeLayout>

</FrameLayout>